updated hyper parameter search display
Former-commit-id: b452141ff35e830f7e1c7a90bb74c37eb83a737a

--- a/notebooks/fingerprint/model_train_S3_LR.ipynb
+++ b/notebooks/fingerprint/model_train_S3_LR.ipynb
@@ -26,7 +26,9 @@
     "1. Serialize the model in different formats in S3\n",
     "1. Save the tuning trials in S3\n",
     "1. Load the model\n",
-    "1. Load a new unseen data"
+    "1. Load a new unseen data\n",
+    "1. Convert image to an array\n",
+    "1. Make a prediction"
    ]
   },
   {
@@ -808,7 +810,7 @@
     "\tbest_hps.get(\"conv_1\")))\n",
     "print(\"[INFO] optimal number of filters in conv_2 layer: {}\".format(\n",
     "\tbest_hps.get(\"conv_2\")))\n",
-    "print(\"[INFO] optimal number of filters in conv_2 layer: {}\".format(\n",
+    "print(\"[INFO] optimal number of filters in conv_3 layer: {}\".format(\n",
     "\tbest_hps.get(\"conv_3\")))\n",
     "print(\"[INFO] optimal number of units in dense layer: {}\".format(\n",
     "\tbest_hps.get(\"dense_units\")))\n",
