--- a/notebooks/fingerprint/model_LR_compression.ipynb
+++ b/notebooks/fingerprint/model_LR_compression.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q tensorflow\n",
+    "!pip install -r ../../requirements.txt --quiet\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -78,90 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model(scratch_path + '/model/hand_prediction.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08fd61b5-49ef-4ac6-abf9-53875b689d36",
-   "metadata": {},
-   "source": [
-    "# Predict on new data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3884a027-f03e-4927-8c67-d80d2cd46634",
-   "metadata": {},
-   "source": [
-    "Use your model to classify an image that wasn't included in the training or validation sets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "155da3dd-d2b3-42ad-931f-32ae1c5260a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define parameters for the loader\n",
-    "\n",
-    "img_height = 96\n",
-    "img_width = 96\n",
-    "class_names=['left','right']\n",
-    "\n",
-    "path = scratch_path + '/hand/right/1__M_Right_index_finger_Obl.png'\n",
-    "\n",
-    "# Loads an image into PIL format.\n",
-    "img = tf.keras.utils.load_img(\n",
-    "    path,\n",
-    "    color_mode='grayscale',\n",
-    "    target_size=(img_height, img_width),\n",
-    "    interpolation='nearest',\n",
-    "    keep_aspect_ratio=False\n",
-    ")\n",
-    "\n",
-    "plt.imshow(img, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ad60971-a531-4c54-a17b-1528111579a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Converts a PIL Image instance to a Numpy array.\n",
-    "img_array = tf.keras.utils.img_to_array(img)\n",
-    "\n",
-    "# Returns a tensor with a length 1 axis inserted at index axis.\n",
-    "img_array = tf.expand_dims(img_array, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc39fadc-c7dd-4576-8db4-e25a0aff6f42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# perform a prediction on the new fingerprint\n",
-    "predictions = model.predict(img_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a445bcdc-f0f5-4810-b47d-e4a18f918a06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = tf.nn.softmax(predictions[0])\n",
-    "\n",
-    "print(\n",
-    "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
-    "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
-    ")"
+    "model = keras.models.load_model( scratch_path + '/model/left-right-print-prediction-1.0.0.h5')"
    ]
   },
   {
@@ -334,9 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_tensorflow2_p38",
    "language": "python",
-   "name": "python3"
+   "name": "conda_tensorflow2_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -348,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
