--- a/notebooks/fingerprint/model_train_S3_LR.ipynb
+++ b/notebooks/fingerprint/model_train_S3_LR.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p $SCRATCH/{decompressed_data,train,test,real,model} && \\\n",
+    "!mkdir -p $SCRATCH/{train,real,model} && \\\n",
     "mkdir -p $SCRATCH/train/{left,right}"
    ]
   },
@@ -912,7 +912,20 @@
     "- The model's compilation information (if compile() was called)\n",
     "- The optimizer and its state, if any (this enables you to restart training where you left)\n",
     "\n",
-    "There are two formats you can use to save an entire model to disk: the TensorFlow SavedModel format, and the older Keras H5 format."
+    "There are two formats you can use to save an entire model to disk: \n",
+    "1. the TensorFlow SavedModel format\n",
+    "1. the older Keras H5 format.\n",
+    "\n",
+    "For versioning, you typically generate several models made up of (code, data, config) that demands model versioning. Toyday there is:\n",
+    "\n",
+    "1. no uniform standard accepted\n",
+    "1. different organizations have different conventions\n",
+    "\n",
+    "MAJOR.MINOR.PIPELINE\n",
+    "\n",
+    "MAJOR: increases when incompatible data changes, schema or target variable change, that renders model incompatible when used for predictions\n",
+    "MINOR: increases when model performance is improved\n",
+    "PIPELINE: correspond to an update to training pipeline but may not change the model itself"
    ]
   },
   {
@@ -931,7 +944,7 @@
    "outputs": [],
    "source": [
     "# older Keras H5 format\n",
-    "model.save( scratch_path + '/model/hand_prediction.h5')"
+    "model.save( scratch_path + '/model/left-right-print-prediction-1.0.0.h5')"
    ]
   },
   {
@@ -942,7 +955,7 @@
    "outputs": [],
    "source": [
     "# TensorFlow SavedModel format\n",
-    "model.save( scratch_path + '/model/hand_prediction.tf')"
+    "model.save( scratch_path + '/model/left-right-print-prediction-1.0.0.tf')"
    ]
   },
   {
@@ -987,7 +1000,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model( scratch_path + '/model/hand_prediction.tf')"
+    "model = keras.models.load_model( scratch_path + '/model/left-right-print-prediction-1.0.0.tf')"
    ]
   },
   {
@@ -996,32 +1009,6 @@
    "metadata": {},
    "source": [
     "## Load a new fingerprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35194285",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# un/comment test a left finger\n",
-    "#path = scratch_path + '/real/10__M_Left_thumb_finger.png'\n",
-    "\n",
-    "# un/comment test a right finger\n",
-    "#path = scratch_path + '/real/1__M_Right_ring_finger.png'\n",
-    "path = scratch_path + '/real/1__M_Left_little_finger.png'\n",
-    "\n",
-    "\n",
-    "# Loads an image into PIL format.\n",
-    "img = tf.keras.utils.load_img(\n",
-    "    path,\n",
-    "    color_mode=\"grayscale\",\n",
-    "    target_size=(img_height, img_width),\n",
-    "    interpolation='nearest',\n",
-    ")\n",
-    "\n",
-    "plt.imshow(img, cmap='gray')"
    ]
   },
   {
@@ -1088,16 +1075,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07718915-f08c-4433-ba03-0d346cf58687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "break"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7417ec1c-dfc0-4f2f-80b8-0a0944bc0e78",
    "metadata": {},
@@ -1108,29 +1085,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7023af9d-be12-4f75-8480-567bdca1bd57",
+   "id": "6de13571-bdbd-4e94-9e5d-9fe39eda9090",
    "metadata": {},
    "outputs": [],
    "source": [
+    "break\n",
     "!rm -rf $scratch_path/decompressed_data && \\\n",
     "rm -rf $scratch_path/train && \\\n",
-    "rm -rf $scratch_path/test && \\\n",
     "rm -rf $scratch_path/real && \\\n",
     "rm -rf $scratch_path/model"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d63a8ada-736f-4abf-95a7-dbe7e0a7a5fa",
-   "metadata": {},
-   "source": [
-    "## Delete Bucket data and remove Buckets"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b196d364-f17a-43d8-b92d-0a02774b9eda",
+   "id": "b8fbcb4e-1994-43bd-a883-e3617d48e950",
    "metadata": {},
    "outputs": [],
    "source": []
