--- a/notebooks/fingerprint/model_train_local_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_local_leftright.ipynb
@@ -170,7 +170,7 @@
     "# \n",
     "\n",
     "img_height = 96              # desired height\n",
-    "img_width = 96               # desiredd width\n",
+    "img_width = 96               # desired width\n",
     "batch_size = 32              # batch inputs in 32\n",
     "seed_train_validation = 42   # Must be same for train_ds and val_ds\n",
     "validation_split = 0.3       # move 30% of the data into validation"
@@ -1014,9 +1014,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow2_p38",
+   "display_name": "venv",
    "language": "python",
-   "name": "conda_tensorflow2_p38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1028,7 +1028,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9fbaf16404a186558c5830ba9c1870690eb62baaca2b916af320bab80c6b3e76"
+   }
   }
  },
  "nbformat": 4,
