--- a/notebooks/fingerprint/model_compress_leftright.ipynb
+++ b/notebooks/fingerprint/model_compress_leftright.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -U pip --quiet\n",
     "!pip install -r ../../requirements.txt --quiet\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
