--- a/notebooks/fingerprint/model_train_local_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_local_leftright.ipynb
@@ -49,7 +49,7 @@
     "# Install packages and frameworks\n",
     "\n",
     "# TODO move upgrade to start script notebook lifecycle script\n",
-    "!pip install -U pip\n",
+    "!pip install -U pip --quiet\n",
     "!pip install -r ../../requirements.txt --quiet\n",
     "\n",
     "import tensorflow as tf\n",
