--- a/notebooks/fingerprint/model_train_cpu_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_cpu_leftright.ipynb
@@ -105,7 +105,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p $SCRATCH/{train,real,model} && \\\n",
+    "# create a train, test and models folder\n",
+    "!mkdir -p $SCRATCH/{train,test,trained-models-demo} && \\\n",
+    "\n",
+    "# create a left and right folder under train\n",
     "mkdir -p $SCRATCH/train/{left,right}"
    ]
   },
@@ -968,15 +971,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "624a254e-dfd2-4069-9347-10a720504e63",
-   "metadata": {},
-   "source": [
-    "# older Keras H5 format\n",
-    "model.save( scratch_path + '/model/left-right-print-prediction-1.0.0.h5')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4b256bd1",
@@ -990,9 +984,12 @@
   {
    "cell_type": "markdown",
    "id": "60023558",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## S3 "
+    "## S3 \n",
+    "\n"
    ]
   },
   {
@@ -1146,9 +1143,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow2_p38",
+   "display_name": "conda_tensorflow2_p310",
    "language": "python",
-   "name": "conda_tensorflow2_p38"
+   "name": "conda_tensorflow2_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1160,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
