update: notebook, add sparkle
Former-commit-id: 2dbfea9b6db47ef0bbbaac456d69d6972a9e997b

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d903133d",
    "metadata": {
@@ -28,10 +29,10 @@
     "\n",
     "### Notebook Tested Requirements\n",
     "\n",
-    "|Notebook origin|Notebook Customization|Instance Type|Kernel|TensorFlow|ETC||||\n",
+    "|Notebook origin|Notebook Customization|Instance Type|Kernel|TensorFlow|Runtime||||\n",
     "|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|:-------|\n",
-    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.m5.4xlarge (vCPU: 16, RAM: 64 GiB)|conda_tensorflow2_p310|2.11|120 minutes||||\n",
-    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.p3.8xlarge (vCPU: 32, RAM: 244 GiB)|conda_tensorflow2_p310|2.11|TBP minutes||||"
+    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.m5.4xlarge (vCPU: 16, RAM: 64 GiB)|conda_tensorflow2_p310|2.11|~120 minutes||||\n",
+    "|SageMaker Notebook Instances|[from GitHub](https://github.com/redhat-na-ssa/demo-rosa-sagemaker/blob/main/sagemaker/lifecycle-from-github.sh)|ml.p3.8xlarge (vCPU: 32, RAM: 244 GiB)|conda_tensorflow2_p310|2.11|~15 minutes||||"
    ]
   },
   {
@@ -51,9 +52,9 @@
    "source": [
     "# Install packages and frameworks\n",
     "\n",
-    "# TODO move upgrade to start script notebook lifecycle script\n",
-    "#!pip install -U pip --quiet\n",
-    "#!pip install -r ../../requirements.txt --quiet\n",
+    "# pkgs installed via notebook lifecycle script\n",
+    "# ! pip install -U pip --quiet\n",
+    "# ! pip install -r ../../requirements.txt --quiet\n",
     "\n",
     "import tensorflow as tf\n",
     "import os\n",
@@ -96,7 +97,7 @@
    "source": [
     "# this directory is apart of the .gitignore to ensure it is not committed to git\n",
     "%env SCRATCH=../scratch\n",
-    "![ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"/models/hand\n",
+    "! [ -e \"${SCRATCH}\" ] || mkdir -p \"${SCRATCH}\"/models/hand\n",
     "\n",
     "scratch_path = os.environ.get('SCRATCH', '../scratch')"
    ]
@@ -109,9 +110,10 @@
    "outputs": [],
    "source": [
     "# create a train and real folder and create a left and right folder under train\n",
-    "!mkdir -p \"${SCRATCH}\"/{hand,real,models} && mkdir -p \"${SCRATCH}\"/hand/{left,right}\n",
+    "! mkdir -p \"${SCRATCH}\"/{hand,real,models} && \\\n",
+    "  mkdir -p \"${SCRATCH}\"/hand/{left,right}\n",
     "\n",
-    "!mkdir -p \"$SCRATCH/models/hand/models/1/\""
+    "! mkdir -p \"${SCRATCH}/models/hand/models/1\""
    ]
   },
   {
@@ -131,12 +133,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!tar -xJf ./compressed_data/left.xz -C \"${SCRATCH}\"/hand/left/ && \\\n",
-    "tar -xJf ./compressed_data/right.xz -C \"${SCRATCH}\"/hand/right && \\\n",
-    "tar -xJf ./compressed_data/real.xz -C \"${SCRATCH}\"/ "
+    "! tar -xJf ./compressed_data/left.xz -C \"${SCRATCH}\"/hand/left/ && \\\n",
+    "  tar -xJf ./compressed_data/right.xz -C \"${SCRATCH}\"/hand/right && \\\n",
+    "  tar -xJf ./compressed_data/real.xz -C \"${SCRATCH}\"/ "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9104057a",
    "metadata": {},
@@ -146,15 +149,26 @@
     "Boto3 allows for easy access to AWS tools and objects. We will establish the resource and list the s3 buckets available.\n",
     "\n",
     "***ACTION REQUIRED:***\n",
-    "Create S3 Buckets options:\n",
-    "1. from the OpenShift AWS ACK Operator for S3 from the OpenShift console. Example CRs are under examples directory, for example \"demo-rosa-sagemaker/openshift/examples/s3-sagemaker-real-cr.yml\"\n",
-    "1. from the notebook cells below using the [AWS CLI]()\n",
     "\n",
-    "Create buckets:\n",
-    "1. `sagemaker-fingerprint-data`\n",
-    "1. `sagemaker-fingerprint-models`\n",
+    "Create S3 Buckets:\n",
+    "- `sagemaker-fingerprint-data`\n",
+    "- `sagemaker-fingerprint-models`\n",
     "\n",
-    "`IMPORTANT: in order for sagemaker to write or read, the bucket names MUST include \"sagemaker-\"`"
+    "`IMPORTANT: in order for sagemaker to write or read, the bucket names MUST include \"sagemaker-\"`\n",
+    "\n",
+    "### OpenShift\n",
+    "\n",
+    "Use CR with ACK Operator for S3 from the OpenShift console or `oc`\n",
+    "\n",
+    "See CRs in [openshift/examples](../../openshift/examples/)\n",
+    "\n",
+    "```\n",
+    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-data-cr.yml\n",
+    "oc apply -f openshift/examples/s3-sagemaker-fingerprint-models-cr.yml\n",
+    "```\n",
+    "\n",
+    "### AWS\n",
+    "- See below [`aws` example](#aws-s3-cli)\n"
    ]
   },
   {
@@ -164,8 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# boto3 library allows for easy access to aws ecosystem of tools and products. \n",
-    "# SageMaker is a part of aws ecosystem of tools, so it allows easy access to S3.\n",
+    "# boto3 library allows for easy access to aws ecosystem of tools and products\n",
+    "# SageMaker is a part of aws ecosystem of tools, so it allows easy access to S3\n",
     "import boto3\n",
     "\n",
     "s3 = boto3.resource('s3')\n",
@@ -201,8 +215,15 @@
    "outputs": [],
    "source": [
     "# create bucket\n",
-    "!aws s3api create-bucket --bucket sagemaker-fingerprint-data --region us-east-2 --create-bucket-configuration LocationConstraint=us-east-2 && \\\n",
-    "aws s3api create-bucket --bucket sagemaker-fingerprint-models --region us-east-2 --create-bucket-configuration LocationConstraint=us-east-2"
+    "! aws s3api create-bucket \\\n",
+    "    --bucket sagemaker-fingerprint-data \\\n",
+    "    --region us-east-2 \\\n",
+    "    --create-bucket-configuration LocationConstraint=us-east-2\n",
+    "\n",
+    "! aws s3api create-bucket \\\n",
+    "    --bucket sagemaker-fingerprint-models \\\n",
+    "    --region us-east-2 \\\n",
+    "    --create-bucket-configuration LocationConstraint=us-east-2"
    ]
   },
   {
@@ -213,18 +234,19 @@
    "outputs": [],
    "source": [
     "# list objects using the aws s3 cli\n",
-    "!aws s3 ls"
+    "! aws s3 ls"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e855be42-785d-4cc7-9352-0b7f36859322",
    "metadata": {},
    "source": [
     "### Upload training data to s3\n",
     "\n",
-    "1. Upload left data from `train` to `s3://sagemaker-fingerprint-data/left`\n",
-    "1. Upload right data from `train` to `s3://sagemaker-fingerprint-data/right`\n",
+    "1. Upload left data from `scratch` to `s3://sagemaker-fingerprint-data/left`\n",
+    "1. Upload right data from `scratch` to `s3://sagemaker-fingerprint-data/right`\n",
     "1. Upload real data from `scratch` to `s3://sagemaker-fingerprint-data`"
    ]
   },
@@ -236,17 +258,18 @@
    "outputs": [],
    "source": [
     "# upload the objects to s3 demonstrating interaction with object storage\n",
-    "!aws s3 sync $SCRATCH/hand/left s3://sagemaker-fingerprint-data/hand/left --quiet && \\\n",
-    "aws s3 sync $SCRATCH/hand/right s3://sagemaker-fingerprint-data/hand/right --quiet && \\\n",
-    "aws s3 sync $SCRATCH/real s3://sagemaker-fingerprint-data --quiet"
+    "! aws s3 sync ${SCRATCH}/hand/left s3://sagemaker-fingerprint-data/hand/left --quiet && \\\n",
+    "  aws s3 sync ${SCRATCH}/hand/right s3://sagemaker-fingerprint-data/hand/right --quiet && \\\n",
+    "  aws s3 sync ${SCRATCH}/real s3://sagemaker-fingerprint-data/real --quiet"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c18047be-9dc0-4b3e-b60c-1f2dd36bdc7a",
    "metadata": {},
    "source": [
-    "### Download training data from s3\n",
+    "### Download training data from s3 (optional)\n",
     "\n",
     "1. Download left data from `s3://sagemaker-fingerprint-data/left` to `train/left`\n",
     "1. Download right data from `s3://sagemaker-fingerprint-data/right` to `train/right`\n",
@@ -261,9 +284,10 @@
    "outputs": [],
    "source": [
     "# download the objects to s3 demonstrating interaction with object storage\n",
-    "!aws s3 sync s3://sagemaker-fingerprint-data/hand/left $SCRATCH/hand/left --quiet && \\\n",
-    "aws s3 sync s3://sagemaker-fingerprint-data/hand/right $SCRATCH/hand/right --quiet && \\\n",
-    "aws s3 sync s3://sagemaker-fingerprint-data $SCRATCH/real --quiet"
+    "\n",
+    "#! aws s3 sync s3://sagemaker-fingerprint-data/hand/left $SCRATCH/hand/left --quiet && \\\n",
+    "#  aws s3 sync s3://sagemaker-fingerprint-data/hand/right $SCRATCH/hand/right --quiet && \\\n",
+    "#  aws s3 sync s3://sagemaker-fingerprint-data/real $SCRATCH/real --quiet"
    ]
   },
   {
@@ -275,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b906563",
    "metadata": {},
@@ -284,13 +309,13 @@
     "Keras utility generates a dataset from image files in a directory and infers the labels based on the parent folder. This utility will return a tf.data.Dataset that yields batches of images from the subdirectories left and right\n",
     "\n",
     "```\n",
-    "train/\n",
-    "...left/\n",
-    "......a_image_1.jpg\n",
-    "......a_image_2.jpg\n",
-    "...right/\n",
-    "......b_image_1.jpg\n",
-    "......b_image_2.jpg\n",
+    "hand/\n",
+    "├── left/\n",
+    "│   ├── a_image_1.jpg\n",
+    "│   └── a_image_2.jpg\n",
+    "└── right/\n",
+    "    ├── b_image_1.jpg\n",
+    "    └── b_image_2.jpg\n",
     "```"
    ]
   },
@@ -301,9 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "# set variables for consistency\n",
-    "# \n",
     "\n",
     "img_height = 96              # desired height\n",
     "img_width = 96               # desiredd width\n",
@@ -329,12 +352,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "# create the training dataset\n",
-    "#\n",
     "\n",
     "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    '../scratch/hand',\n",
+    "    scratch_path + '/hand',\n",
     "    labels='inferred',\n",
     "    label_mode = \"categorical\", \n",
     "    class_names=['left','right'],\n",
@@ -365,12 +386,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "# create the validation dataset\n",
-    "#\n",
     "\n",
     "validation_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
-    "    '../scratch/hand',\n",
+    "    scratch_path + '/hand',\n",
     "    labels='inferred',\n",
     "    label_mode = \"categorical\", \n",
     "    class_names=['left','right'],\n",
@@ -401,9 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "# create the test dataset\n",
-    "#\n",
     "\n",
     "test_ds = validation_ds.take(16)\n",
     "validation_ds = validation_ds.skip(16)"
@@ -630,11 +647,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
-    "# **UPDATE** device variable\n",
     "#  example, single device device=\"/gpu:0\"\n",
     "#  example, multiple devices devices=[\"/gpu:0\", \"/gpu:1\"]\n",
-    "#\n",
     "\n",
     "device=\"/cpu:0\"\n",
     "#device=\"/gpu:0\"\n",
@@ -658,9 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# uncomment to create a OneDeviceStrategy.\n",
-    "# \n",
+    "# uncomment to create a OneDeviceStrategy\n",
     "\n",
     "#strategy = tf.distribute.OneDeviceStrategy(device=device)"
    ]
@@ -682,15 +694,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# uncomment to create a MirroredStrategy.\n",
-    "# \n",
+    "# uncomment to create a MirroredStrategy\n",
     "\n",
     "#strategy = tf.distribute.MirroredStrategy(devices=device)\n",
     "#strategy = tf.distribute.MirroredStrategy()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "666a45f5",
    "metadata": {},
@@ -702,7 +713,9 @@
     "MultiWorkerMirroredStrategy has two implementations for cross-device communications. \n",
     "1. CommunicationImplementation.RING is RPC-based and supports both CPUs and GPUs. \n",
     "1. CommunicationImplementation.NCCL uses NCCL and provides state-of-art performance on GPUs but it doesn't support CPUs. \n",
-    "1. CollectiveCommunication.AUTO defers the choice to Tensorflow. You can specify them in the following way:"
+    "1. CollectiveCommunication.AUTO defers the choice to Tensorflow. \n",
+    "\n",
+    "You can specify them in the following way:"
    ]
   },
   {
@@ -712,9 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "# uncomment to create a Multi-worker Mirrored Strategy\n",
-    "#\n",
     "\n",
     "communication_options = tf.distribute.experimental.CommunicationOptions(\n",
     "    # RING is RPC-based and supports both CPUs and GPUs.\n",
@@ -725,6 +736,7 @@
     "    \n",
     "    # AUTO defers the choice to Tensorflow.\n",
     "    implementation=tf.distribute.experimental.CommunicationImplementation.AUTO)\n",
+    "\n",
     "strategy = tf.distribute.MultiWorkerMirroredStrategy(communication_options=communication_options)"
    ]
   },
@@ -745,11 +757,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "# Model from scratch\n",
-    "#\n",
+    "# build model from scratch\n",
     "\n",
-    "!pip install keras-tuner -q\n",
+    "! pip install keras-tuner -q\n",
     "\n",
     "from tensorflow.keras.models import Sequential, Model, load_model\n",
     "from tensorflow.keras.layers import Dense, Dropout,Activation, Flatten, Conv2D, MaxPooling2D, BatchNormalization\n",
@@ -845,13 +855,13 @@
    "outputs": [],
    "source": [
     "num_classes = len(class_names)\n",
-    "model_path = \"${SCRATCH}/models/hand/models/1\"\n",
+    "model_path = scratch_path + '/models/hand/models/1'\n",
     "\n",
-    "# Open a strategy scope.\n",
+    "# open a strategy scope\n",
     "tuner = kt.Hyperband(\n",
     "    model_builder,\n",
     "    objective='val_accuracy',\n",
-    "    # Unteger, the maximum number of epochs to train one model. It is recommended to set this to a value slightly higher than the expected epochs to convergence for your largest Model, and to use early stopping during trainin\n",
+    "    # Integer, the maximum number of epochs to train one model. It is recommended to set this to a value slightly higher than the expected epochs to convergence for your largest Model, and to use early stopping during training\n",
     "    max_epochs=5,\n",
     "    # Integer, the reduction factor for the number of epochs and number of models for each bracket. Defaults to 3.\n",
     "    factor=3,\n",
@@ -883,7 +893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stop training when a monitored metric has stopped improving.\n",
+    "# stop training when a monitored metric has stopped improving\n",
     "stop_early = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5, mode=\"auto\")"
    ]
   },
@@ -1013,6 +1023,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31fe4249",
    "metadata": {},
@@ -1034,6 +1045,12 @@
     "\n",
     "`/parent-folder/project-name/VERSION_NUMBER/MAJOR.MINOR.PIPELINE.tf`\n",
     "\n",
+    "Triton expects the following folder structure:\n",
+    "\n",
+    "`/parent-folder/project-name/VERSION_NUMBER/model.savedmodel`\n",
+    "\n",
+    "* `parent-folder` should be the root of s3 url, ex: `s3://bucket/parent-folder`\n",
+    "\n",
     "Conceptual Version Guide:\n",
     "- MAJOR: increases when incompatible data changes, schema or target variable change, that renders model incompatible when used for predictions\n",
     "- MINOR: increases when model performance is improved\n",
@@ -1041,13 +1058,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50dbdc54",
    "metadata": {},
    "source": [
     "## Locally\n",
     "\n",
-    "You MUST have the model artifacts as `model.savedmodel`"
+    "Triton MUST have the model artifacts as `model.savedmodel`"
    ]
   },
   {
@@ -1079,8 +1097,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the models to S3\n",
-    "!aws s3 sync $SCRATCH/models/ s3://sagemaker-fingerprint-models/models/"
+    "# save the models to S3\n",
+    "! aws s3 sync ${SCRATCH}/models s3://sagemaker-fingerprint-models/models"
    ]
   },
   {
@@ -1106,7 +1124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model(scratch_path + '/models/hand/models/1/')"
+    "model = keras.models.load_model(scratch_path + '/models/fingerprint/1/model.savedmodel')"
    ]
   },
   {
@@ -1132,17 +1150,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# un/comment test a print\n",
-    "#path = scratch_path + '/real/1__M_Right_ring_finger.png'\n",
-    "#path = scratch_path + '/real/380__M_Right_index_finger.png'\n",
-    "path = scratch_path + '/real/466__F_Right_thumb_finger.png'\n",
-    "#path = scratch_path + '/real/1__M_Left_little_finger.png'\n",
-    "#path = scratch_path + '/real/105__M_Left_little_finger.png'\n",
-    "#path = scratch_path + '/real/467__M_Left_little_finger.png'\n",
+    "# select random images\n",
+    "import random\n",
     "\n",
-    "# Loads an image into PIL format.\n",
+    "samples_path = scratch_path + '/real/'\n",
+    "\n",
+    "file_list = os.listdir(samples_path)\n",
+    "\n",
+    "print('Files in path: ' + str(len(file_list)))\n",
+    "\n",
+    "test_image = random.choice(file_list)\n",
+    "print('Selected: ' + test_image)\n",
+    "\n",
+    "# manually select test images\n",
+    "#test_image = scratch_path + '/real/1__M_Right_ring_finger.png'\n",
+    "#test_image = scratch_path + '/real/380__M_Right_index_finger.png'\n",
+    "#test_image = scratch_path + '/real/466__F_Right_thumb_finger.png'\n",
+    "\n",
+    "#test_image = scratch_path + '/real/1__M_Left_little_finger.png'\n",
+    "#test_image = scratch_path + '/real/105__M_Left_little_finger.png'\n",
+    "\n",
+    "#test_image = scratch_path + '/real/467__M_Left_little_finger.png'\n",
+    "\n",
+    "# loads an image into PIL format.\n",
     "img = tf.keras.utils.load_img(\n",
-    "    path,\n",
+    "    samples_path + test_image,\n",
     "    color_mode=\"grayscale\",\n",
     "    target_size=(img_height, img_width),\n",
     "    interpolation='nearest',\n",
@@ -1150,7 +1182,7 @@
     "\n",
     "plt.imshow(img, cmap='gray')\n",
     "\n",
-    "# Converts a PIL Image instance to a Numpy array.\n",
+    "# converts a PIL Image instance to a Numpy array.\n",
     "img_array = tf.keras.utils.img_to_array(img)"
    ]
   },
@@ -1213,23 +1245,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf $scratch_path"
+    "#! rm -rf $scratch_path"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8abe39d3-7886-4dae-a5f0-f08b6c9d93c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow2_p310",
+   "display_name": "venv",
    "language": "python",
-   "name": "conda_tensorflow2_p310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1241,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
