--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -329,7 +329,7 @@
     "# set variables for consistency\n",
     "\n",
     "img_height = 96              # desired height\n",
-    "img_width = 96               # desiredd width\n",
+    "img_width = 96               # desired width\n",
     "batch_size = 32              # batch inputs in 32\n",
     "seed_train_validation = 42   # Must be same for train_ds and val_ds\n",
     "validation_split = 0.3       # move 30% of the data into validation"
