fix: man test images
Former-commit-id: 267c4d245872ba11bc66ff8e58cec36d7c5fa434

--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -1162,15 +1162,15 @@
     "test_image = random.choice(file_list)\n",
     "print('Selected: ' + test_image)\n",
     "\n",
-    "# manually select test images\n",
-    "#test_image = scratch_path + '/real/1__M_Right_ring_finger.png'\n",
-    "#test_image = scratch_path + '/real/380__M_Right_index_finger.png'\n",
-    "#test_image = scratch_path + '/real/466__F_Right_thumb_finger.png'\n",
+    "# manually select test image\n",
+    "#test_image = samples_path + '1__M_Right_ring_finger.png'\n",
+    "#test_image = samples_path + '380__M_Right_index_finger.png'\n",
+    "#test_image = samples_path + '466__F_Right_thumb_finger.png'\n",
     "\n",
-    "#test_image = scratch_path + '/real/1__M_Left_little_finger.png'\n",
-    "#test_image = scratch_path + '/real/105__M_Left_little_finger.png'\n",
+    "#test_image = samples_path + '1__M_Left_little_finger.png'\n",
+    "#test_image = samples_path + '105__M_Left_little_finger.png'\n",
     "\n",
-    "#test_image = scratch_path + '/real/467__M_Left_little_finger.png'\n",
+    "#test_image = samples_path + '467__M_Left_little_finger.png'\n",
     "\n",
     "# loads an image into PIL format.\n",
     "img = tf.keras.utils.load_img(\n",
