--- a/notebooks/fingerprint/model_train_s3_leftright.ipynb
+++ b/notebooks/fingerprint/model_train_s3_leftright.ipynb
@@ -110,10 +110,8 @@
    "outputs": [],
    "source": [
     "# create a train and real folder and create a left and right folder under train\n",
-    "! mkdir -p \"${SCRATCH}\"/{hand,real,models} && \\\n",
-    "  mkdir -p \"${SCRATCH}\"/hand/{left,right}\n",
-    "\n",
-    "! mkdir -p \"${SCRATCH}/models/hand/models/1\""
+    "! mkdir -p \"${SCRATCH}\"/{hand,models,real} && \\\n",
+    "  mkdir -p \"${SCRATCH}\"/hand/{left,right}"
    ]
   },
   {
@@ -855,7 +853,7 @@
    "outputs": [],
    "source": [
     "num_classes = len(class_names)\n",
-    "model_path = scratch_path + '/models/hand/models/1'\n",
+    "model_path = scratch_path + '/models/fingerprint/1/model.savedmodel'\n",
     "\n",
     "# open a strategy scope\n",
     "tuner = kt.Hyperband(\n",
@@ -869,7 +867,7 @@
     "    distribution_strategy=strategy,\n",
     "    # directory to save the hyperparameter trials\n",
     "    # TODO Update with a variable\n",
-    "    directory=scratch_path + '/models/hand/models/1/model_hp',\n",
+    "    directory=scratch_path + '/tune/model_hp',\n",
     "    # folder to save the hyperparameter trail outputs\n",
     "    project_name='hypertune',\n",
     "    #  If you re-run the hyperparameter search, the Keras Tuner uses the existing state from these logs to resume the search. \n",
